# rprs

./: Cargo.toml  LICENSE  README.md  test_variable_reference.rs
src/: lib.rs  main.rs
src/basic/: mod.rs  utils.rs
src/basic/body/: block.rs  mod.rs
src/basic/body/fun/: function.rs  mod.rs  parameter.rs
src/basic/body/stmt/: for_statement.rs  if_statement.rs  mod.rs  single_statement.rs  statement.rs  when_statement.rs  while_statement.rs
src/basic/cls/: basic_type.rs  basic_types.rs  class.rs  custom_class.rs  generic_type.rs  mod.rs
src/basic/cls/number_types/: floating_point.rs  mod.rs  number.rs  signed_integer.rs  unsigned_integer.rs
src/basic/expr/: arithmetic_expression.rs  arithmetich_expression.rs  boolean_expression.rs  expression.rs  mod.rs  operator.rs
src/basic/var/: init.rs  mod.rs  variable.rs
src/basic/var/prefix/: init.rs  mod.rs  mutability.rs  scope.rs  var_prefix.rs  visibility.rs
src/config/: args.rs
src/file/: mod.rs  src_file.rs
src/skeleton/: mod.rs
src/skeleton/expr/: expression.rs
src/skeleton/var/: mod.rs  prefix.rs  variable.rs
src/tests/: generic_tests.rs  mod.rs  smart_generic_tests.rs
src/type_system/: mod.rs  type_checker.rs  type_context.rs  type_environment.rs  type_inference.rs  type_result.rs  typed_generator.rs  types.rs
