[package]
name = "randprog_rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
jemalloc = ["jemallocator"]

[dependencies]
derive_more = { version = "2.0.1", features = ["constructor", "display"] }
jemallocator = { version = "0.5.4", optional = true }
num_cpus = "1.17.0"
ordered-float = "5.0.0"
rand = { version = "0.9.2", features = ["std_rng"] }
rayon = "1.11.0"
strum = "0.27.2"
strum_macros = "0.27.2"
